Added comments to all files, translated all UI elements to French and did minor refactoring.